# python-project-standards

./: .gitignore  .sonarcloud.properties  CLAUDE.md  README.md  SRD.md  pyproject.toml
.ai/: AI_CHANGELOG.md  README.md
.ai/tasks/: 20250915-1246-summarize-modern-python-standards-creation.md  20250915-1248-organize-project-per-standards.md  20250915-1315-summarize-compliance-checker-creation.md  20250915-1316-rename-standards-document.md  20250915-1348-consolidate-documentation.md  TASKS.md
.github/workflows/: ApplyPythonRuffFormatting.yml  PythonManager.yml  nightly-compliance-check.yml
docs/: python-project-standards.md
docs/compliance-checker/: README.md  TEST_OPPORTUNITIES.md  UNATTENDED_SETUP.md
src/compliance_checker/: __init__.py  batch_checker.sh  check_python_project_standards.py
tests/: test_compliance_checker.py
